@startuml

enum OrderStatus {
    OPEN
    CLOSED
    CANCELED
}

class Book {
    - String title
    - String writer
    - int yearPublished
    - double price
    - boolean isAvailable
    - Date lastSoldDate
    + Book(String title, String writer, int yearPublished, double price, boolean isAvailable)
    + String getTitle()
    + String getWriter()
    + int getYearPublished()
    + double getPrice()
    + boolean getAvailability()
    + Date getLastSoldDate()
    + void changeAvailability(boolean status)
    + void setLastSoldDate(Date date)
    + boolean equals(Object obj)
    + int hashCode()
    + String getDescription()
}

class PurchaseOrder {
    - Set<Book> items
    - OrderStatus currentStatus
    - Date orderDate
    + PurchaseOrder(Set<Book> items)
    + Set<Book> getItems()
    + OrderStatus getCurrentStatus()
    + Date getOrderDate()
    + double getTotalPrice()
    + void updateStatus(OrderStatus newStatus)
    + boolean canBeClosed()
    + String getOrderDetails()
}

class LibraryRequest {
    - Book requestedBook
    + LibraryRequest(Book requestedBook)
    + Book getRequestedBook()
    + boolean matchesBook(Book book)
}

class LibraryInventory {
    - Set<Book> inventory
    + LibraryInventory(Set<Book> books)
    + void markBookAsAvailable(Book book)
    + void removeBookFromInventory(Book book)
}

class BookStore {
    - Set<Book> availableBooks
    - ArrayList<PurchaseOrder> activePurchaseOrders
    - ArrayList<LibraryRequest> pendingRequests
    - LibraryInventory libraryInventory
    + BookStore(Set<Book> availableBooks)
    + PurchaseOrder generateOrder(Set<Book> selectedBooks)
    + void finalizeOrder(PurchaseOrder purchaseOrder)
    + void voidOrder(PurchaseOrder purchaseOrder)
    + List<LibraryRequest> getPendingRequests()
    + List<PurchaseOrder> getCompletedOrdersByPeriod(Date startDate, Date endDate, Comparator<PurchaseOrder> comparator)
    + double getTotalEarningsByPeriod(Date startDate, Date endDate)
    + long getCompletedOrderCountByPeriod(Date startDate, Date endDate)
    + List<Book> getStaleBooks(Date currentDate)
}

BookStore "1" --* "1" LibraryInventory
BookStore "1" --o "many" Book
BookStore "1" --o "many" PurchaseOrder
BookStore "1" --* "many" LibraryRequest

LibraryRequest "1" --> "1" Book
LibraryRequest "1" --> "1" PurchaseOrder

LibraryInventory "1" --* "many" Book

PurchaseOrder "1" --o "many" Book

@enduml